--- a/Expedition/Storyboards/Onboarding.storyboard
+++ b/Expedition/Storyboards/Onboarding.storyboard
@@ -17,16 +17,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mCE-EH-lKd">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                                 <connections>
                                     <segue destination="FG7-ud-6Gh" kind="embed" id="MZY-7v-ADp"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2r-oW-2gt">
-                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v2r-oW-2gt">
+                                <rect key="frame" x="107" y="807" width="200" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="v2r-oW-2gt" secondAttribute="height" multiplier="137:60" id="UuT-pY-ANr"/>
-                                    <constraint firstAttribute="width" constant="250" id="XGP-pf-742"/>
+                                    <constraint firstAttribute="width" secondItem="v2r-oW-2gt" secondAttribute="height" multiplier="704:176" id="UuT-pY-ANr"/>
+                                    <constraint firstAttribute="width" constant="200" id="XGP-pf-742"/>
                                 </constraints>
                                 <state key="normal" image="continueBtn"/>
                                 <state key="highlighted" image="continueBtn-P"/>
@@ -39,7 +39,7 @@
                         <constraints>
                             <constraint firstItem="mCE-EH-lKd" firstAttribute="top" secondItem="rN7-lk-5QD" secondAttribute="top" id="Dek-Os-321"/>
                             <constraint firstItem="mCE-EH-lKd" firstAttribute="leading" secondItem="Xho-IF-Wgk" secondAttribute="leading" id="YFM-av-nTb"/>
-                            <constraint firstItem="v2r-oW-2gt" firstAttribute="top" secondItem="mCE-EH-lKd" secondAttribute="bottom" id="aP0-im-Cem"/>
+                            <constraint firstItem="v2r-oW-2gt" firstAttribute="top" secondItem="mCE-EH-lKd" secondAttribute="bottom" constant="25" id="aP0-im-Cem"/>
                             <constraint firstItem="Xho-IF-Wgk" firstAttribute="bottom" secondItem="v2r-oW-2gt" secondAttribute="bottom" constant="5" id="gSq-Xr-EWv"/>
                             <constraint firstItem="mCE-EH-lKd" firstAttribute="trailing" secondItem="Xho-IF-Wgk" secondAttribute="trailing" id="iGL-b9-q4U"/>
                             <constraint firstItem="v2r-oW-2gt" firstAttribute="centerX" secondItem="rN7-lk-5QD" secondAttribute="centerX" id="vkf-js-0IZ"/>
@@ -57,7 +57,7 @@
             <objects>
                 <tableViewController id="FG7-ud-6Gh" customClass="Onb1ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="NoA-hO-hbh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <color key="separatorColor" name="Expedition White"/>
@@ -173,16 +173,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P6B-g0-7su">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                                 <connections>
                                     <segue destination="igf-cF-bXx" kind="embed" id="bKc-LG-MCL"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-kQ-LuS">
-                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f6c-kQ-LuS">
+                                <rect key="frame" x="107" y="807" width="200" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="f6c-kQ-LuS" secondAttribute="height" multiplier="137:60" id="Deo-dz-V6b"/>
-                                    <constraint firstAttribute="width" constant="250" id="W7E-29-F5h"/>
+                                    <constraint firstAttribute="width" secondItem="f6c-kQ-LuS" secondAttribute="height" multiplier="704:176" id="Deo-dz-V6b"/>
+                                    <constraint firstAttribute="width" constant="200" id="W7E-29-F5h"/>
                                 </constraints>
                                 <state key="normal" image="continueBtn"/>
                                 <state key="highlighted" image="continueBtn-P"/>
@@ -197,7 +197,7 @@
                             <constraint firstItem="f6c-kQ-LuS" firstAttribute="centerX" secondItem="gbS-aa-RAa" secondAttribute="centerX" id="OGw-Og-oJQ"/>
                             <constraint firstItem="vOg-Lv-qbG" firstAttribute="bottom" secondItem="f6c-kQ-LuS" secondAttribute="bottom" constant="5" id="TsW-yk-w4h"/>
                             <constraint firstItem="P6B-g0-7su" firstAttribute="trailing" secondItem="vOg-Lv-qbG" secondAttribute="trailing" id="Wmo-lw-Rga"/>
-                            <constraint firstItem="f6c-kQ-LuS" firstAttribute="top" secondItem="P6B-g0-7su" secondAttribute="bottom" id="cfM-XK-Rkt"/>
+                            <constraint firstItem="f6c-kQ-LuS" firstAttribute="top" secondItem="P6B-g0-7su" secondAttribute="bottom" constant="25" id="cfM-XK-Rkt"/>
                             <constraint firstItem="P6B-g0-7su" firstAttribute="leading" secondItem="vOg-Lv-qbG" secondAttribute="leading" id="m0i-TW-FBe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vOg-Lv-qbG"/>
@@ -213,7 +213,7 @@
             <objects>
                 <tableViewController id="igf-cF-bXx" customClass="Onb2ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="p3H-6a-FE6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <color key="separatorColor" name="Expedition White"/>
@@ -369,16 +369,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xTp-dj-Hof">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                                 <connections>
                                     <segue destination="WpT-AJ-97r" kind="embed" id="FcI-AZ-QVa"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJ5-sS-O0r">
-                                <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CJ5-sS-O0r">
+                                <rect key="frame" x="107" y="807" width="200" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="PYv-TH-oHE"/>
-                                    <constraint firstAttribute="width" secondItem="CJ5-sS-O0r" secondAttribute="height" multiplier="137:60" id="giy-zh-GYO"/>
+                                    <constraint firstAttribute="width" constant="200" id="PYv-TH-oHE"/>
+                                    <constraint firstAttribute="width" secondItem="CJ5-sS-O0r" secondAttribute="height" multiplier="704:176" id="giy-zh-GYO"/>
                                 </constraints>
                                 <state key="normal" image="continueBtn"/>
                                 <state key="highlighted" image="continueBtn-P"/>
@@ -391,7 +391,7 @@
                         <constraints>
                             <constraint firstItem="sDk-dw-uP0" firstAttribute="bottom" secondItem="CJ5-sS-O0r" secondAttribute="bottom" constant="5" id="Pbp-bu-V3D"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="top" secondItem="hyE-rf-k3w" secondAttribute="top" id="Z79-6X-mZW"/>
-                            <constraint firstItem="CJ5-sS-O0r" firstAttribute="top" secondItem="xTp-dj-Hof" secondAttribute="bottom" id="Zot-Nx-vwc"/>
+                            <constraint firstItem="CJ5-sS-O0r" firstAttribute="top" secondItem="xTp-dj-Hof" secondAttribute="bottom" constant="25" id="Zot-Nx-vwc"/>
                             <constraint firstItem="CJ5-sS-O0r" firstAttribute="centerX" secondItem="hyE-rf-k3w" secondAttribute="centerX" id="apH-gY-bAO"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="trailing" secondItem="sDk-dw-uP0" secondAttribute="trailing" id="jkV-8O-HUe"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="leading" secondItem="sDk-dw-uP0" secondAttribute="leading" id="k8H-b2-w2W"/>
@@ -409,7 +409,7 @@
             <objects>
                 <tableViewController id="WpT-AJ-97r" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="zTQ-Jv-nFQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="782"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <gestureRecognizers/>
@@ -584,8 +584,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="continueBtn" width="959" height="442.5"/>
-        <image name="continueBtn-P" width="959" height="420"/>
+        <image name="continueBtn" width="704" height="176"/>
+        <image name="continueBtn-P" width="704" height="176"/>
         <image name="shieldBlue" width="1024" height="1024"/>
         <image name="swipeBlue" width="1024" height="1024"/>
         <image name="wrenchBlue" width="1024" height="1024"/>
